@@ -1,4 +1,5 @@
 Sun 17 May 2020 Yasuhiro Яша Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Fix embedded default theme rendering
 	* Update style for default theme
 	* Remove unnecessary CODEOWNERS
 
